--- a/css/style.css
+++ b/css/style.css
@@ -8,8 +8,10 @@ body{
 
 .nav{
     display: flex;
+    flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-between;
+    align-items: center;
     padding-left: 10px;
     background-color: #f383a7;
     border-color: white;
@@ -27,11 +29,10 @@ body{
 
 .menu{
     display: flex;
-    align-items:center;
+    flex-wrap: wrap;
 }
 
 .li{
-    display: flex;
     margin: 10px;
     padding: 5px;
     font-family: 'Pacifico', cursive;
@@ -62,7 +63,7 @@ body{
 .container{
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     text-align: center;
     padding: 20px;
@@ -73,21 +74,22 @@ body{
 .acercade{
     flex: 1;
     font-family: 'Salsa', cursive;
-    padding: 50px;
+    margin-right: 10px;
 }
 
 .mapa{
+    flex: 1;
     border-color: black;
     border-width: 5px;
     border-style: solid;
     height: 350px;
-    margin-left: 50px;
-    margin-right: 50px;
+    margin-left: 10px;
 }
 
 .conocenos{
     display: flex;
     flex-wrap: wrap;
+    align-items: center;
     justify-content: center;
     font-size: 25px;
     font-family: 'Salsa', cursive;
@@ -140,11 +142,10 @@ footer{
     text-decoration: none;
 }
 
-/*
+
 @media (max-width: 600px) {
-    body{
-        flex-direction:row;
+    .container{
+        flex-direction:column;
         align-items: flex-start;
     }
 }
-*/
