--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,18 @@
 body{
     margin: 0;
     padding: 0;
-    background-image: url(../img/back.jpg);
+    background-image: url(../img/fondoNuevo.jpg);
     background-size: contain;
 }
 
 /*Estilos para header*/
 
+header{
+    flex-flow: column-wrap;
+}
+
 .nav{
     display: flex;
-    flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
     padding-left: 10px;
@@ -20,8 +23,10 @@ body{
 }
 
 .logo{
+    max-width: 100%;
+    width: 75px;
     margin: 5px;
-    height: 65px;
+    height: auto;
 }
 
 .logo:hover{
@@ -49,19 +54,6 @@ body{
 }
 
 /*Estilos para contenedor 1*/
-
-.container1{
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: center;
-    text-align: center;
-    margin:20px;
-    margin-left: 200px;
-    margin-right: 200px;
-}
-
 .title{
     font-family: 'Pacifico', cursive;
     font-size: 60px;
@@ -72,48 +64,55 @@ body{
     padding: 20px;
 }
 
-.acercade{
-    font-family: 'Salsa', cursive;
-    margin-top: 15px;
-}
-
-iframe{
-    width:400px; 
-    height:300px; 
-    border:0;
-}
-
-/*Estilos para contenedor 2*/
-
-.container2{
+.container1{
     display: flex;
-    flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
     text-align: center;
-    margin:20px;
-    margin-left: 350px;
-    margin-right: 350px;
+    margin: 75px;
 }
 
+.acercade{
+    font-family: 'Salsa', cursive;
+}
+
+iframe{
+    width: 400px;
+    height: 300px;
+}
+
+.mapa{
+    flex: 1;
+    margin-top: 40px;
+}
+
+/*Estilos para contenedor 2*/
 .conocenos{
     font-size: 25px;
     font-family: 'Salsa', cursive;
-    margin-top: 50px;
     text-align: center;
+}
+
+.container2{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    text-align: center;
+    margin-right: 200px;
+    margin-left: 200px;
 }
 
 .botones{
     flex: 1;
-    align-items: center;
     border-color: #d66372;
     background-color: white;
     border-width: 15px;
     border-style: solid;
     font-family: 'Pacifico', cursive;
     font-size: 25px;
-    margin: 10px;
+    margin: 30px;
     padding: 20px;
 }
 
@@ -141,8 +140,10 @@ footer{
 }
 
 .iglogo{
+    max-width: 100%;
     padding: 10px;
-    height: 55px;
+    width: 55px;
+    height: auto;
 }
 
 .copy{
@@ -154,7 +155,7 @@ footer{
 
 /* Aún sin funcionar.
 
-@media (max-width: 600px) {
+@media (min-width: 768px) {
     .container{
         flex-direction: column;
         align-items: flex-start;
