--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,6 @@ body {
     padding: 0;
     background-image: url(../img/fondoNuevo.jpg);
     background-size: contain;
-    box-sizing: border-box;
 }
 
 /*Estilos para header (para index y todas las pages)*/
@@ -107,7 +106,7 @@ iframe {
 }
 
 .botones {
-    flex: 50%;
+    flex: 1;
     border-color: #d66372;
     background-color: white;
     border-width: 15px;
@@ -136,24 +135,56 @@ footer {
 }
 
 /*Animación Instagram*/
-.ig:hover{
+.ig:hover {
     animation-name: shake;
     animation-duration: 0.5s;
     animation-iteration-count: initial;
 }
 
 @keyframes shake {
-    0% { transform: translate(1px, 1px) rotate(0deg); }
-    10% { transform: translate(-1px, -2px) rotate(-1deg); }
-    20% { transform: translate(-3px, 0px) rotate(1deg); }
-    30% { transform: translate(3px, 2px) rotate(0deg); }
-    40% { transform: translate(1px, -1px) rotate(1deg); }
-    50% { transform: translate(-1px, 2px) rotate(-1deg); }
-    60% { transform: translate(-3px, 1px) rotate(0deg); }
-    70% { transform: translate(3px, 1px) rotate(-1deg); }
-    80% { transform: translate(-1px, -1px) rotate(1deg); }
-    90% { transform: translate(1px, 2px) rotate(0deg); }
-    100% { transform: translate(1px, -2px) rotate(-1deg); }
+    0% {
+        transform: translate(1px, 1px) rotate(0deg);
+    }
+
+    10% {
+        transform: translate(-1px, -2px) rotate(-1deg);
+    }
+
+    20% {
+        transform: translate(-3px, 0px) rotate(1deg);
+    }
+
+    30% {
+        transform: translate(3px, 2px) rotate(0deg);
+    }
+
+    40% {
+        transform: translate(1px, -1px) rotate(1deg);
+    }
+
+    50% {
+        transform: translate(-1px, 2px) rotate(-1deg);
+    }
+
+    60% {
+        transform: translate(-3px, 1px) rotate(0deg);
+    }
+
+    70% {
+        transform: translate(3px, 1px) rotate(-1deg);
+    }
+
+    80% {
+        transform: translate(-1px, -1px) rotate(1deg);
+    }
+
+    90% {
+        transform: translate(1px, 2px) rotate(0deg);
+    }
+
+    100% {
+        transform: translate(1px, -2px) rotate(-1deg);
+    }
 }
 
 .ig {
@@ -200,7 +231,10 @@ form {
     width: 400px;
 }
 
-label, input, select, textarea {
+label,
+input,
+select,
+textarea {
     font-family: 'Salsa', cursive;
     margin-bottom: 4px;
     border-radius: 4px;
@@ -221,26 +255,29 @@ select {
 
 .btn:hover {
     background-color: #047bb3;
-  }
+}
 
-.btnreset{
+.btnreset {
     background-color: #707070;
 }
 
-.btnreset:hover{
+.btnreset:hover {
     background-color: #a7a5a5;
 }
 
 /*Estilos exclusivos para Talleres y Workshops*/
 
-.containerCards{
-    width: 100%;
-    display: flex;
+.containerCards {
+    width: 90%;
+    margin: 20px auto;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
 }
 
-.card{
-    width: 100%;
-    margin:20px;
+.card {
+    display: flex;
+    flex-direction: column;
+    margin: 10px;
     border-radius: 6px;
     overflow: hidden;
     background-color: #bd8686;
@@ -248,35 +285,39 @@ select {
     cursor: default;
 }
 
-.card:hover{
+.card:hover {
     box-shadow: 5px 5px 20px;
     transform: translateY(-3%);
 }
 
-.card img{
+.card img {
     width: 100%;
     height: auto;
 }
 
-.card .contenido{
-    padding: 15px;
+.card .contenido {
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    padding: 20px 10px;
     text-align: center;
     font-family: 'Salsa';
-    color:white;
+    color: white;
 }
 
-.card .contenido h3{
+.card .contenido h3 {
     margin-bottom: 20px;
     font-weight: 300;
 }
 
-.card .contenido p{
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+.card .contenido p {
+    flex-grow: 1;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
-.card .contenido a{
+.card .contenido a {
     text-decoration: none;
-    display: inline-block;
+    display: block;
     padding: 10px;
     margin-top: 20px;
     border: 1px solid white;
@@ -285,9 +326,9 @@ select {
     color: #047bb3;
 }
 
-.card .contenido a:hover{
+.card .contenido a:hover {
     background-color: #047bb3;
-    color:white;
+    color: white;
 }
 
 /* Responsive design */
@@ -358,5 +399,38 @@ select {
 
     form {
         width: 200px;
+    }
+
+    .card {
+        margin: 5px;
+    }
+
+    .card:hover {
+        box-shadow: 5px 5px 10px;
+    }
+
+    .card .contenido {
+        flex-wrap: wrap;
+        padding: 10px 5px;
+    }
+
+    .card .contenido h3 {
+        margin-bottom: 10px;
+        font-weight: 200;
+    }
+
+    .card .contenido p {
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        font-size: 10px;
+    }
+
+    .card .contenido a {
+        padding: 5px;
+        margin-top: 10px;
+    }
+
+    .card .contenido a:hover {
+        background-color: #047bb3;
+        color: white;
     }
 }
