--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,7 @@ header {
     text-align: center;
     margin: 35px;
     padding: 20px;
+    /*Animación para que el texto crezca y decrezca según tamaño de la pantalla*/
     transition: font-size 2s ease-in-out;
 }
 
@@ -134,13 +135,14 @@ footer {
     text-align: center;
 }
 
-/*Animación Instagram*/
+/*Animación texto seguinos en Instagram*/
 .ig:hover {
     animation-name: shake;
     animation-duration: 0.5s;
     animation-iteration-count: initial;
 }
 
+/* Keyframe para configurar estilo de la animación shake*/
 @keyframes shake {
     0% {
         transform: translate(1px, 1px) rotate(0deg);
@@ -268,7 +270,7 @@ select {
 /*Estilos exclusivos para Talleres y Workshops*/
 
 .containerCards {
-    width: 90%;
+    width: 100%;
     margin: 20px auto;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
